2008-07-25  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db.c: Finding a dud hit is no longer a
	warning, just a regular message.
	
	* src/trackerd/tracker-index-manager.c: Reworked the way we get
	indexes so we remember them to avoid creating too many
	TrackerIndex objects. Also fixed a nasty bug here which was
	getting one for EVERY time the status callback was triggered by
	the indexer :O
	
	* src/trackerd/tracker-index.c: Cleaned up the code a bit and put
	some more locking in place. This is redundant for now since we
	don't have a multithreaded approach at the moment. 

2008-07-25  Martyn Russell  <martyn@imendio.com>

	* tests/trackerd/Makefile.am:
	* tests/trackerd/tracker-index-test.c:
	(test_created_file_in_the_mean_time): Fixed compilation errors.

2008-07-25  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-processor.c: (indexer_status_cb),
	(indexer_finished_cb): Call the index reload function when we get
	status updates from the indexer.
	
	* tests/trackerd/tracker-indexer-test.c: Renamed to reflect new
	TrackerIndex name.

2008-07-25  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db.[ch]:
	* src/trackerd/tracker-dbus.[ch]:
	* src/trackerd/tracker-index-manager.[ch]:
	* src/trackerd/tracker-index.[ch]:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-query-tree.[ch]:
	* src/trackerd/tracker-search.[ch]: Renamed
	TrackerIndexer->TrackerIndex, since it is the index not the
	indexer. 

2008-07-25  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-db.h:
	* src/trackerd/tracker-dbus.h:
	* src/trackerd/tracker-index-manager.h:
	* src/trackerd/tracker-index.c:
	* src/trackerd/tracker-indexer.[ch]:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-metadata.[ch]:
	* src/trackerd/tracker-query-tree.h:
	* src/trackerd/tracker-search.[ch]: